chore: 🤖 change known extension

--- a/packages/apps/public/locales/en/react-signer.json
+++ b/packages/apps/public/locales/en/react-signer.json
@@ -1,16 +1,27 @@
 {
+  "Adding Proof of Transaction AssetPayment": "Adding Proof of Transaction AssetPayment",
+  "Adding Proof of Transaction voteCandidate": "Adding Proof of Transaction voteCandidate",
+  "Adding Transaction Fee Payer": "Adding Transaction Fee Payer",
   "Adding an optional tip to the transaction could allow for higher priority, especially when the chain is busy.": "Adding an optional tip to the transaction could allow for higher priority, especially when the chain is busy.",
+  "Asset ID (optional)": "Asset ID (optional)",
   "Authorize transaction": "Authorize transaction",
   "Current account nonce: {{accountNonce}}": "Current account nonce: {{accountNonce}}",
+  "Do not include a Asset ID": "Do not include a Asset ID",
+  "Do not include a Fee Payer": "Do not include a Fee Payer",
   "Do not include a tip for the block author": "Do not include a tip for the block author",
+  "Do not include a vote": "Do not include a vote",
   "Don't use a proxy for this call": "Don't use a proxy for this call",
+  "Include an optional Asset ID": "Include an optional Asset ID",
+  "Include an optional Fee Payer": "Include an optional Fee Payer",
   "Include an optional tip for faster processing": "Include an optional tip for faster processing",
+  "Include an optional vote": "Include an optional vote",
   "Lifetime (# of blocks)": "Lifetime (# of blocks)",
   "Multisig approval with hash (non-final approval)": "Multisig approval with hash (non-final approval)",
   "Multisig message with call (for final approval)": "Multisig message with call (for final approval)",
   "Non-signature, non-hex data received from QR. Data contains \"{{sample}}\" instead of a hex-only signature. Please present the correct signature generated from the QR presented for submission.": "Non-signature, non-hex data received from QR. Data contains \"{{sample}}\" instead of a hex-only signature. Please present the correct signature generated from the QR presented for submission.",
   "Nonce": "Nonce",
   "Override any applicable values for the specific signed output. These will be used to construct and display the signed transaction.": "Override any applicable values for the specific signed output. These will be used to construct and display the signed transaction.",
+  "Pallet Index (optional)": "Pallet Index (optional)",
   "Preparing QR for signing": "Preparing QR for signing",
   "Set to 0 to make transaction immortal": "Set to 0 to make transaction immortal",
   "Sign (no submission)": "Sign (no submission)",
@@ -33,9 +44,12 @@
   "Unable to connect to the Ledger, ensure support is enabled in settings and no other app is using it. {{errorMessage}}": "Unable to connect to the Ledger, ensure support is enabled in settings and no other app is using it. {{errorMessage}}",
   "Unlock the sending account to allow signing of this transaction.": "Unlock the sending account to allow signing of this transaction.",
   "Use a proxy for this call": "Use a proxy for this call",
+  "Vote Candidate (optional)": "Vote Candidate (optional)",
   "call hash": "call hash",
+  "fee payer (optional)": "fee payer (optional)",
   "multisig call data": "multisig call data",
   "multisig signatory": "multisig signatory",
+  "parachain ID (optional)": "parachain ID (optional)",
   "proxy account": "proxy account",
   "sending from my account": "sending from my account",
   "unlock account with password": "unlock account with password",
